# rag-practise

./: .env.local  .gitignore  LICENSE  README.md  pyproject.toml  query_transform.ipynb
configs/: experiment.crud-rag.yaml  models.yaml
dataset/: crud_rag_100_distractors.jsonl  crud_rag_20_cases.jsonl
scripts/: plot_query_transform_results.py
src/rag_practise/: __init__.py  cli.py
src/rag_practise/datasets/: __init__.py  crud_rag.py
src/rag_practise/evaluation/: __init__.py  judge.py  retrieval_metrics.py
src/rag_practise/experiments/: __init__.py  events.py  generation_runner.py  judge_runner.py  model_config.py  runner.py
src/rag_practise/generation/: __init__.py  answer.py
src/rag_practise/llm/: __init__.py  base.py  gemini_chat.py  http_openai_compatible_chat.py  openai_compatible_chat.py  openai_compatible_embedding.py
src/rag_practise/retrieval/: __init__.py  index.py  retriever.py
src/rag_practise/transforms/: __init__.py  base.py  baseline.py  child_query.py  expand.py  hyde.py  multi_query.py  rewrite.py  step_back.py
tests/: test_dataset_retrieval_runner.py  test_events.py  test_generation_runner.py  test_judge.py  test_llm_clients.py  test_model_matrix.py  test_real_api_smoke.py  test_transforms.py
