[project]
name = "rag-practise"
version = "0.1.0"
description = "Query transformation experiments for compact RAG evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.12.0",
    "google-genai>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "seaborn>=0.13.0",
    "typer>=0.12.0",
]

[project.scripts]
rag-practise = "rag_practise.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_practise"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
